--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<iframe src="https://uploads.knightlab.com/storymapjs/876fcd7d77764edeec803ec2ab8c5683/migration-placement-during-2023/index.html" frameborder="0" width="100%" height="800"></iframe>
+<h1> Angeles' Digital Production Lab</h1>
+<h2>Foundations Class</h2>
 
+<body>
+
+    <p>
+<iframe src="https://uploads.knightlab.com/storymapjs/876fcd7d77764edeec803ec2ab8c5683/migration-placement-during-2023/index.html" frameborder="0" width="100%" height="800"></iframe>
+</p>
+
+<p>
+
+<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1PFk6yeoCxDUqs8SO-lLW3dSeJjl_1V7UE88RLQ5yzvo&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+
+</p>
+
+</body>
